--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,8 +4,8 @@ import heroImage from "assets/wonder-dots-logo.svg";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
-<main class="md:pt-12 pt-16 pb-8 md:pb-24">
-  <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter mb-16">
+<main class="pt-32 pb-24">
+  <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter mb-8">
     MINT Aktivitäten für Kids
   </h1>
   <div class="grid md:grid-cols-3 gap-8 justify-items-start place-items-top">
@@ -17,7 +17,7 @@ import { Icon } from "astro-icon/components";
         </p>
 
         <p class="mt-4">
-          Wir wollen Interesse an den <strong>MINT Fächern</strong> Mathematik, Informatik, Naturwissenschaften und Technik wecken und fördern.
+          Wir wollen Interesse an <strong>MINT Fächern</strong> Mathematik, Informatik, Naturwissenschaften und Technik wecken und vor allem die <strong>Informatische Bildung</strong> fördern.
         </p>
 
         <p class="mt-4">
