--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ import Aboutcourses from "../components/aboutcourses.astro";
 import Currentcourse from "../components/currentcourse.astro";
 ---
 
-<Layout title="">
+<Layout>
+  <Hero />
+  <Currentcourse />
   <Container>
-    <Hero />
-    <Currentcourse />
     <Aboutcourses />
     <!--<Logos />-->
     <!--<Cta />-->
