--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,38 +57,13 @@ const makeTitle = title
     />
   </head>
   <body class="relative bg-blue-100">
-
-    <!-- Background container -->
-    <div class="absolute inset-0 -z-10">
-      <!-- top background -->
-      <div class="relative bg-blue-100 h-[170px]">
-        <!-- blue bubbles -->
+    <!-- blue bubbles -->
+    <div class="absolute inset-0 -z-10 max-w-screen-xl mx-auto">
+      <div class="relative">
         <div class="absolute w-64 h-64 bg-blue-200 opacity-80 rounded-full -left-12 -top-16"></div>
-        <div class="absolute w-28 h-28 bg-blue-300 opacity-20 rounded-full top-20 right-1/3"></div>
-        <div class="absolute w-36 h-36 bg-blue-400 opacity-30 rounded-full top-0 right-1/3"></div>
-        <div class="absolute w-48 h-48 bg-blue-600 opacity-40 rounded-full -top-20 right-72"></div>
-        <!-- white bubbles -->
-        <div class="absolute w-64 h-64 bg-white rounded-full top-20 -left-8"></div>
-        <div class="absolute w-52 h-52 bg-white rounded-full top-12 left-40"></div>
-        <div class="absolute w-40 h-40 bg-white rounded-full top-24 left-80"></div>
-        <div class="absolute w-96 h-96 bg-white rounded-full top-24 left-[calc(430px)]"></div>
-
-      </div>
-
-      <!-- middle background -->
-      <div class="relative bg-white h-[calc(650px)]"></div>
-
-      <!-- bottom background -->
-      <div class="relative h-[calc(100%-660px)] bg-emerald-200">
-        <!-- blue bubbles -->
-        <div class="absolute w-64 h-64 bg-emerald-200 rounded-full -top-10 -left-12"></div>
-        <div class="absolute w-72 h-72 bg-emerald-200 rounded-full -top-14 left-32"></div>
-        <div class="absolute w-48 h-48 bg-emerald-200 rounded-full -top-16 left-72"></div>
-        <div class="absolute w-96 h-96 bg-emerald-200 rounded-full -top-8 left-80"></div>
-        <div class="absolute w-36 h-36 bg-emerald-200 rounded-full -top-10 left-[calc(540px)]"></div>
-
-        <div class="absolute w-64 h-64 bg-emerald-200 rounded-full -top-20 left-[calc(640px)]"></div>
-        <div class="absolute w-96 h-96 bg-emerald-200 rounded-full -top-12 left-[calc(740px)]"></div>
+        <div class="absolute w-28 h-28 bg-blue-300 opacity-20 rounded-full top-10 right-1/3"></div>
+        <div class="absolute w-36 h-36 bg-blue-400 opacity-30 rounded-full -top-10 right-1/3"></div>
+        <div class="absolute w-48 h-48 bg-bluee-600 opacity-40 rounded-full top-12 right-96"></div>
       </div>
     </div>
 
