--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,10 +60,11 @@ const makeTitle = title
     <!-- blue bubbles -->
     <div class="absolute inset-0 -z-10 max-w-screen-xl mx-auto">
       <div class="relative">
-        <div class="absolute w-64 h-64 bg-blue-200 opacity-80 rounded-full -left-12 -top-16"></div>
-        <div class="absolute w-28 h-28 bg-blue-300 opacity-20 rounded-full top-10 right-1/3"></div>
-        <div class="absolute w-36 h-36 bg-blue-400 opacity-30 rounded-full -top-10 right-1/3"></div>
-        <div class="absolute w-48 h-48 bg-bluee-600 opacity-40 rounded-full top-12 right-96"></div>
+        <div class="absolute w-48 h-48 bg-blue-200 opacity-80 rounded-full left-5 -top-2"></div>
+        <div class="absolute w-28 h-28 bg-blue-300 opacity-60 rounded-full left-40 top-12"></div>
+        <div class="absolute w-28 h-28 bg-blue-300 opacity-20 rounded-full top-24 right-1/3"></div>
+        <div class="absolute w-36 h-36 bg-blue-400 opacity-30 rounded-full top-1 right-1/3"></div>
+        <div class="absolute w-48 h-48 bg-blue-600 opacity-40 rounded-full top-12 right-80"></div>
       </div>
     </div>
 
