bubble pos and rel

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -7,11 +7,11 @@ import Container from "./container.astro";
 ---
 <main class="mt-44 max-w-screen-xl mx-auto">
   <!-- bubbles -->
-  <div class="absolute -z-10">
+  <div class="relative -z-10">
     <div class="absolute w-64 h-64 bg-white rounded-full -top-20 -left-8" />
     <div class="absolute w-52 h-52 bg-white rounded-full -top-12 left-40" />
-    <div class="absolute w-40 h-40 bg-white rounded-full -top-24 left-80" />
-    <div class="absolute w-96 h-96 bg-white rounded-full -top-24 left-[calc(430px)]" />
+    <div class="absolute w-40 h-40 bg-white rounded-full -top-24 right-80" />
+    <div class="absolute w-96 h-96 bg-white rounded-full -top-24 right-96" />
   </div>
 
   <!-- content -->
