--- a/src/components/currentcourse.astro
+++ b/src/components/currentcourse.astro
@@ -7,14 +7,14 @@ import Link from "./ui/link.astro";
 
 <section class="mt-44 max-w-screen-xl mx-auto">
   <!-- bubbles -->
-  <div class="absolute -z-10">
+  <div class="relative -z-10">
     <div class="absolute w-64 h-64 bg-emerald-300 rounded-full -top-20 -left-12"></div>
     <div class="absolute w-72 h-72 bg-emerald-300 rounded-full -top-14 left-32"></div>
     <div class="absolute w-48 h-48 bg-emerald-300 rounded-full -top-16 left-72"></div>
-    <div class="absolute w-96 h-96 bg-emerald-300 rounded-full -top-8 left-80"></div>
-    <div class="absolute w-36 h-36 bg-emerald-300 rounded-full -top-10 left-[calc(540px)]"></div>
-    <div class="absolute w-64 h-64 bg-emerald-300 rounded-full -top-20 left-[calc(640px)]"></div>
-    <div class="absolute w-96 h-96 bg-emerald-300 rounded-full -top-12 left-[calc(740px)]"></div>
+    <div class="absolute w-96 h-96 bg-emerald-300 rounded-full -top-8 right-96"></div>
+    <div class="absolute w-36 h-36 bg-emerald-300 rounded-full -top-10 right-80"></div>
+    <div class="absolute w-64 h-64 bg-emerald-300 rounded-full -top-20 right-80"></div>
+    <div class="absolute w-96 h-96 bg-emerald-300 rounded-full -top-12 right-10"></div>
   </div>
 
 
