--- a/src/components/currentcourse.astro
+++ b/src/components/currentcourse.astro
@@ -10,7 +10,7 @@ import Link from "./ui/link.astro";
   <div class="relative -z-10">
     <div class="absolute w-64 h-64 bg-emerald-300 rounded-full -top-20 -left-12"></div>
     <div class="absolute w-72 h-72 bg-emerald-300 rounded-full -top-14 left-32"></div>
-    <div class="absolute w-48 h-48 bg-emerald-300 rounded-full -top-16 left-72"></div>
+    <div class="absolute w-48 h-48 bg-emerald-300 rounded-full -top-16 left-1/3"></div>
     <div class="absolute w-96 h-96 bg-emerald-300 rounded-full -top-8 right-96"></div>
     <div class="absolute w-36 h-36 bg-emerald-300 rounded-full -top-10 right-80"></div>
     <div class="absolute w-64 h-64 bg-emerald-300 rounded-full -top-20 right-80"></div>
