container pos and nav

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -15,7 +15,7 @@ import Container from "./container.astro";
   </div>
 
   <!-- content -->
-  <div class="bg-white px-20 pt-8 pb-16 xl:rounded-3xl">
+  <div class="bg-white px-10 pt-8 pb-16 xl:rounded-tr-3xl">
     <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter mb-8">
       MINT Aktivitäten für Kids
     </h1>
