--- a/src/components/aboutcourses.astro
+++ b/src/components/aboutcourses.astro
@@ -4,17 +4,14 @@ import { Picture } from "astro:assets";
 
 <a id="aboutcourses" class="mb-16 block" />
 
-<div class="mt-16 md:mt-0">
-  <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
+<div class="px-5">
+  <h2 class="mt-16 mb-4 text-4xl lg:text-5xl font-bold lg:tracking-tight">
     Über unsere Kurse
   </h2>
-</div>
 
-
-<div>
-  <h2 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mb-4">
+  <h3 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mb-4">
     Informatik: Spielerisch und Kreativ
-  </h2>
+  </h3>
   <p class="mt-4">
     Die Inhalte unserer Kurse sind im Unterricht an Primarschulen erprobt.
     Sie wurden ausserem auf Messen wie der <a href="https://tunbasel.ch/">tunBasel</a> und der <a href="https://tunsolothurn.ch/">tunSolothurn</a> mit hunderten Kinden im Alter von 6 bis 14 Jahren erfolgreich getestet.
@@ -44,4 +41,3 @@ import { Picture } from "astro:assets";
     Gern binden wir engagierte Lehrpersonen in unsere Workshops ein.
   </p>
 </div>
-
