--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -39,7 +39,7 @@ const menuitems = [
 ---
 
 <Container>
-  <header class="flex flex-col lg:flex-row justify-between items-center my-4 py-4">
+  <header class="flex flex-col lg:flex-row justify-between items-center my-4 py-4 px-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-3xl font-bold text-slate-800">
@@ -66,24 +66,27 @@ const menuitems = [
                   <li>
                     <a
                       href={item.path}
-                      class="flex lg:px-3 py-2 items-center text-xl text-gray-600 hover:text-gray-900">
+                      class="flex lg:px-3 py-2 text-2xl lg:text-xl text-gray-600 hover:text-gray-900">
                       <span> {item.title}</span>
-                      {item.badge && (
-                        <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
-                          New
-                        </span>
-                      )}
+
+                      <!--{item.badge && (-->
+                      <!--  <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">-->
+                      <!--    New-->
+                      <!--  </span>-->
+                      <!--)}-->
+
                     </a>
                   </li>
                 )}
+
               </>
             ))
           }
         </ul>
-        <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="#" style="muted" block size="md">Log in</Link>
-          <Link href="#" size="md" block>Sign up</Link>
-        </div>
+        <!--<div class="lg:hidden flex items-center mt-3 gap-4">-->
+        <!--  <Link href="#" style="muted" block size="md">Log in</Link>-->
+        <!--  <Link href="#" size="md" block>Sign up</Link>-->
+        <!--</div>-->
       </MenuItems>
     </Astronav>
   </header>
