--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -15,50 +15,50 @@ import Container from "./container.astro";
   </div>
 
   <!-- content -->
-  <div class="bg-white px-10 pt-8 pb-16 xl:rounded-tr-3xl">
+  <div class="bg-white px-10 pt-8 pb-40 xl:rounded-tr-3xl">
     <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter mb-8">
-      MINT Aktivitäten für Kids
+      MINT-Aktivitäten für Kids
     </h1>
-    <div class="grid md:grid-cols-3 gap-8 justify-items-start place-items-top">
-      <div class="md:col-span-2">
 
-        <section class="text-lg max-w-xl">
+    <div class="grid md:grid-cols-6 gap-16 place-items-top">
+      <div class="md:col-span-4 stretch">
+
+        <section class="text-lg mx-auto">
           <p class="mt-4">
-            <strong>Wonder Dots</strong> steht für Begeisterung, Neugier und Kreativität.
+            <strong>Wonder <span class="text-gray-500">Dots</span></strong> steht für <strong>Neugier</strong>, <strong>Kreativität</strong> und Spass am <strong>Entdecken</strong>.
           </p>
 
           <p class="mt-4">
-            Wir wollen Interesse an <strong>MINT Fächern</strong> Mathematik, Informatik, Naturwissenschaften und Technik wecken und vor allem die <strong>Informatische Bildung</strong> fördern.
+            Unsere <strong>interaktiven Kurse</strong> in <strong>kleinen Gruppen</strong> wecken spielerisch
+            das Interesse an Mathematik, Informatik, Naturwissenschaften und Technik (<strong>MINT</strong>) und fördern gezielt
+            das <strong>informatische Denken</strong> (Computational Thinking) – nicht nur am Bildschirm!
           </p>
-
           <p class="mt-4">
-            Unsere Kurse sind <strong>abwechslungsreich</strong> und <strong>interaktiv</strong>. In kleinen Gruppen bleibt genug Raum für <strong>kreative Aktivitäten</strong>, nicht nur am Bildschirm.
+            Hast du Lust, mit uns die digitale Welt zu erkunden?
           </p>
-
           <p class="mt-4">
-            Hast Du Lust, mit uns die digitale Welt zu entdecken? <br>
-            Dann checke unsere aktuellen Aktivitäten und melde Dich an!
+            Entdecke unsere aktuellen Aktivitäten und melde dich gleich an!
           </p>
 
           <p class="mt-6 flex flex-col sm:flex-row gap-3">
             <Link
               size="lg"
-              appearance="outline"
+              appearance="activity"
               href="#current"
-              class="flex gap-1 items-center justify-center">
+              class="flex gap-2 items-center justify-center mt-8">
               <Icon class="text-black w-4 h-4" name="bx:calendar" />
               Aktuelle Aktivität
             </Link>
           </p>
 
           <p class="mt-4">
-            Wir freuen uns auf neugierige Köpfe und inspirierende Events!
+            Wir freuen uns auf neugierige Köpfe und spannende Events!
           </p>
 
         </section>
       </div>
 
-      <div class="py-6 hidden md:block pr-8">
+      <div class="md:col-span-2 pr-8">
         <Picture
           src={heroImage}
           alt="Wonder Dots Logo"
