--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,7 +3,7 @@ interface Props {
   href: string;
   size?: "md" | "lg";
   block?: boolean;
-  appearance?: "outline" | "primary" | "inverted" | "muted";
+  appearance?: "outline" | "activity" | "primary" | "inverted" | "muted";
   class?: string;
 
   [x: string]: any;
@@ -25,6 +25,7 @@ const sizes = {
 
 const appearances = {
   outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
+  activity: "bg-emerald-300 border-2 border-black hover:bg-gray-100 text-black ",
   primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
   inverted: "bg-white text-black   border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent"
