--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -45,7 +45,7 @@ import Container from "./container.astro";
               size="lg"
               appearance="activity"
               href="#current"
-              class="flex gap-2 items-center justify-center mt-8">
+              class="flex gap-2 items-center justify-center mt-8 text-xl">
               <Icon class="text-black w-4 h-4" name="bx:calendar" />
               Aktuelle Aktivität
             </Link>
