--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,10 +15,12 @@ import { Icon } from "astro-icon/components";
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
-        Kontakt zu uns aufnehmen
+        Fragen? Ideen? Feedback?
       </h2>
       <p class="text-lg leading-relaxed text-slate-500">
-        Du hast Fragen oder möchtest uns etwas mitteilen? Wir freuen uns auf deine Kontaktaufnahme!
+        Wir freuen uns über deine Nachricht – egal ob du etwas wissen möchtest, Feedback
+        hast oder einfach mehr über unsere Angebote erfahren willst.
+        Kontaktdaten
       </p>
 
       <div class="mt-5">
