--- a/src/components/currentcourse.astro
+++ b/src/components/currentcourse.astro
@@ -2,6 +2,8 @@
 import { Picture } from "astro:assets";
 import flyer1 from "assets/activities/ruler-pacman/wonder-dots-ruler-pacman.png";
 import Link from "./ui/link.astro";
+import { Icon } from "astro-icon/components";
+import Activity1 from "@components/activities/1-programming-for-primary-kids.astro";
 ---
 <a id="current" class="block" />
 
@@ -19,61 +21,45 @@ import Link from "./ui/link.astro";
 
   <!-- content -->
   <div class="relative bg-emerald-300 px-10 pt-4 xl:rounded-3xl">
-    <div class="mt-16 md:mt-0">
+    <div class="mt-0 md:mt-8 mb-8">
       <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
         Aktuelle Aktivität
       </h2>
     </div>
 
-    <div class="grid gap-10 lg:grid-cols-2 place-items-top pt-16 pb-8 md:pt-12 md:pb-24">
-      <div class="py-6 md:order-1">
-        <h2 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mb-4">Wir kreieren ein Videogame</h2>
+    <div class="grid md:grid-cols-6 gap-4 md:gap-16 place-items-top ml-4 mr-16">
+      <div class="md:col-span-4 stretch md:order-2 md:mb-16">
+
+        <h2 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mb-8">Wir kreieren ein Videogame!</h2>
+
+        <Activity1 />
+
         <p class="mt-4">
-          <strong>... und das schon in der Primarstufe!</strong>
-          Es ist ganz einfach, mit RULER.game ein eigenes Game zu entwickeln.
+          Die Kinder werden kreativ und lernen die Grundlagen der Informatik auf spielerische und kreative Art kennen!
+          Sie zeichnen eigene Spielfiguren und entwickeln ihr erstes Game – ganz ohne Vorkenntnisse.
+          Spielerisch entdecken die Kids dabei die Grundlagen von Programmierung, Logik und sogar ein kleines Stück KI.
         </p>
         <p class="mt-4">
-          <strong>In diesem Workshop lernen wir keine Programmiersprache,</strong>
-          aber wir werden kreativ und lernen die Grundlagen der Programmierung und der Informatik auf spielerische und kreative Art kennen!
+          Interessierte Eltern dürfen ihre Kinder gern begleiten und helfen.
         </p>
         <p class="mt-4">
-          Kennst Du das Spiel Pacman? Wenn nicht - kein Problem - Fangies kennst Du bestimmt.
-        </p>
-        <p class="mt-4">
-          Wir starten damit, unsere Spielfiguren zu gestalten - und zwar ganz old-school mit Stiften und Papier.
-          Wenn Deine Charaktere fertig sind, fotografieren wir sie und bringen sie auf unsere Bildschirme.
-        </p>
-        <p class="mt-4">
-          Jetzt geht es mit der Informatik los: mit <strong>einfachen Wenn-Dann Regeln</strong> sagen wir Pacman, dass er sich mit dem Steuerkreuz bewegen lassen soll.
-          Dann geht es mit den Geistern weiter: sie sollen Pacman jagen - aber wie geht das?
-        </p>
-        <p class="mt-4">
-          Zusammen versuchen wir, verschiedene Lösungen zu finden und du lernst dabei nicht nur die Grundlagen der Programmierung kennen, sondern auch, wie ein Computer und sogar künstliche Intelligenz funktioniert.
-        </p>
-        <p class="mt-4">
-          Mit diesem Wissen können wir unser Game dann noch verbessern - vielleicht lassen wir Pacman noch Bonbons fressen oder wir bauen ein ganz kompliziertes Labyrinth?
-          Wie wäre es mit einer Punkteanzeige oder noch weiteren Gegnern, die den Geistern helfen? Du willst zu zweit spielen? Wir überlegen, wie man das machen kann und probieren es aus!
-        </p>
-        <p class="mt-4">
-          Wenn Dein Game nicht fertig wird, ist das kein Problem: Du kannst es zu Hause weiterbauen! Wir speichern Dein Spiel und du bekommst einen QR-Code. Mit dem Kannst Du Dein Spiel auf jedem Gerät weiterbauen, das einen Webbrowser hat.
-          Du kannst es auch mit Deiner Familie und Freunden teilen und sie bitten, Dein Spiel zu testen ;)
-        </p>
-        <p class="mt-4">
-          Der Workshop ist für Kinder im Alter von 7 bis 12 Jahren geeignet.
-        </p>
-        <p class="mt-4">
-          Wenn ihr könnt, bringt bitte ein Tablet oder Smartphone mit! Falls Ihr keines zur Verfügung habt, können wir Euch auch aber auch mit einem Gerät aushelfen.
+          <Link
+            size="lg"
+            appearance="activity"
+            href="/mint-activities/1-programming-for-primary-kids"
+            class="inline-flex gap-2 items-center justify-center mt-4 bg-white text-xl">
+            <Icon class="text-black w-4 h-4" name="bx:info-circle" />
+            Jetzt entdecken und anmelden!
+          </Link>
         </p>
       </div>
-      <div>
-
+      <div class="md:col-span-2 md:pt-11 md:order-1">
         <Link href="/public/activities/ruler-pacman/wonder-dots-ruler-pacman.pdf" appearance="unstyled" target="_blank">
           <Picture
             class="border-2 border-black rounded-xl"
             src={flyer1}
             alt="Flyer1"
-            widths={[200, 400, 600]}
-            sizes="(max-width: 800px) 100vw, 620px"
+            widths={[200, 400, 800]}
             loading="eager"
             format="avif"
           />
