breakpoints, about and current activity

--- a/src/components/aboutcourses.astro
+++ b/src/components/aboutcourses.astro
@@ -1,6 +1,10 @@
 ---
 import { Picture } from "astro:assets";
 import Link from "./ui/link.astro";
+import { Icon } from "astro-icon/components";
+import img1 from "../assets/sliders/aboutcourses/IMG_1418.jpg";
+import img2 from "../assets/sliders/aboutcourses/IMG_1727.jpg";
+import img3 from "../assets/sliders/aboutcourses/IMG_6879.jpg";
 ---
 
 <a id="aboutcourses" class="mb-16 block" />
@@ -14,19 +18,28 @@ import Link from "./ui/link.astro";
     Informatik: Kreativ. Spielerisch. Verständlich.
   </h3>
   <p>
-    Unsere Kurse sind anders als herkömmliche Programmierkurse:
-    Sie vermitteln nicht nur Code, sondern fördern Computational Thinking – das logische,
-    strukturierte und kreative Denken, das hinter jeder digitalen Lösung steckt.
+    Unsere Kurse sind keine herkömmlichen Programmierkurse:
+    Sie vermitteln kein Coding, sondern Computational Thinking – das logische,
+    strukturierte und kreative Denken, das hinter jeder Programmier-Lösung steckt.
   </p>
+
+
+  <!-- insert carousel here -->
+
+
   <h3 class="text-2xl lg:text-3xl font-bold lg:tracking-tight">
     Erprobt & bewährt
   </h3>
   <p>
-    Unsere Inhalte wurden im Schulunterricht und auf Veranstaltungen wie der
+    Unsere Inhalte wurden im Schulunterricht an Primarschulen und auf Messen wie der
     <a href="https://tunbasel.ch/" rel="nofollow noopener">tunBasel</a>
     und der <a href="https://tunsolothurn.ch/" rel="nofollow noopener">tunSolothurn</a>
-    mit Hunderten von Kinden im Alter von 6 bis 14 Jahren erfolgreich getestet.
+    sowie bei Events im <a href="https://www.verkehrshaus.ch/" rel="nofollow noopener">Verkehrshaus der Schweiz</a>
+    in Luzern mit Hunderten von Kinden im Alter von 6 bis 14 Jahren erfolgreich getestet.
   </p>
+  
+  
+  
   <h3 class="text-2xl lg:text-3xl font-bold lg:tracking-tight">
     Einzigartiges Werkzeug: RULER.game
   </h3>
