--- a/src/components/activities/1-programming-for-primary-kids.astro
+++ b/src/components/activities/1-programming-for-primary-kids.astro
@@ -5,18 +5,18 @@ import { Icon } from "astro-icon/components";
 <div class="border-2 border-dashed border-black bg-white rounded-xl px-6 pt-2 pb-4 mb-12">
   <p class="mt-4">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:time" />
-    am 00.00.2025 von 10:00 bis 13:00 Uhr
+    <span class="block xs:inline">00.00.2025</span> <span class="block xs:inline">von 10:00 bis 13:00 Uhr</span>
   </p>
   <p class="mt-4">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:calendar" />
-    im TBD, Meggen/LU
+    <span class="block xs:inline">TBD, Meggen/LU</span>
   </p>
   <p class="mt-4">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:credit-card" />
-    Kursgebühr CHF 75.00
+    <span class="block xs:inline">Kursgebühr CHF 75.00</span>
   </p>
   <p class="mt-4">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:user" />
-    für Kinder im Alter von 7 bis 12
+    <span class="block xs:inline">Kinder im Alter von 7 bis 12</span>
   </p>
 </div>
