--- a/src/components/currentcourse.astro
+++ b/src/components/currentcourse.astro
@@ -8,10 +8,10 @@ import Activity1 from "@components/activities/1-programming-for-primary-kids.ast
 <a id="current" class="block" />
 
 <section class="pt-12 max-w-screen-xl mx-auto bg-white xl:rounded-b-3xl">
-  <!-- bubbles -->
+  <!-- emerald bubbles -->
   <div class="relative">
     <div class="absolute w-64 h-64 bg-emerald-300 rounded-full -top-20 -left-12"></div>
-    <div class="absolute w-72 h-72 bg-emerald-300 rounded-full -top-14 left-32"></div>
+    <div class="absolute w-72 h-72 bg-emerald-300 rounded-full -top-14 left-32 hidden sm:block"></div>
     <div class="absolute w-48 h-48 bg-emerald-300 rounded-full -top-16 left-1/3"></div>
     <div class="absolute w-96 h-96 bg-emerald-300 rounded-full -top-8 right-96"></div>
     <div class="absolute w-36 h-36 bg-emerald-300 rounded-full -top-10 right-80"></div>
@@ -27,7 +27,7 @@ import Activity1 from "@components/activities/1-programming-for-primary-kids.ast
       </h2>
     </div>
 
-    <div class="grid md:grid-cols-6 gap-4 md:gap-16 place-items-top ml-4 mr-16">
+    <div class="grid md:grid-cols-6 gap-4 md:gap-16 place-items-top md:ml-4 md:mr-16">
       <div class="md:col-span-4 stretch md:order-2 md:mb-16">
 
         <h2 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mb-8">Wir kreieren ein Videogame!</h2>
@@ -48,8 +48,9 @@ import Activity1 from "@components/activities/1-programming-for-primary-kids.ast
             appearance="activity"
             href="/mint-activities/1-programming-for-primary-kids"
             class="inline-flex gap-2 items-center justify-center mt-4 bg-white text-xl">
-            <Icon class="text-black w-4 h-4" name="bx:info-circle" />
-            Jetzt entdecken und anmelden!
+            <Icon class="text-black w-8 h-8" style="text-" name="bx:info-circle" />
+            <span class="hidden xs:inline">Jetzt entdecken und anmelden!</span>
+            <span class="inline xs:hidden">Jetzt anmelden!</span>
           </Link>
         </p>
       </div>
